# android-binder-standalone

./: .gitignore  CMakeLists.txt  README.md
androidtoolsets/: CMakeLists.txt
androidtoolsets/include/bionic/linux/: ashmem.h  binder.h
androidtoolsets/include/utils/: Mutex.h
androidtoolsets/libcutils/: ashmem-dev.c  process_name.c
androidtoolsets/liblog/: logd_write.c
androidtoolsets/libutils/: CallStack.cpp  Threads.cpp  Timers.cpp
binder/: CMakeLists.txt
kmodule/: CMakeLists.txt  binder.c  binder.h  hello.c
kmodule/ashmem/: ashmem.h
kmodule/kbinder/: binder.c
libs/: CMakeLists.txt
libs/binder/: IPCThreadState.cpp  MemoryDealer.cpp  MemoryHeapBase.cpp  Parcel.cpp  binder.cpp
libs/include/binder/: Parcel.h
libs/include/kernel/common/linux/: ashmem.h
libs/include/private/binder/: binder_module.h
libs/include/sbinder/: ICallbackList.h  RemoteCallbackList.h  sbinderServ.h
libs/include/sbinderutils/: strlcpy.h
libs/liblog/: fake_log_device.c
libs/libutils/: Threads.cpp
libs/sbinder/: RemoteCallbackList.cpp  sbinderServ.cpp
sbinder/: CMakeLists.txt
sbinder/binder/: IMemory.cpp  IServiceManager.cpp  MemoryDealer.cpp  Parcel.cpp  ProcessState.cpp  binder.cpp
sbinder/include/binder/: Parcel.h
servicemanager/: CMakeLists.txt  binder.c  service_manager.c
servicemanager/include/: service_manager.h
servicemanager/src/: binder.c  binder.h  service_manager.c
test/: CMakeLists.txt
test/bufferTest/: CMakeLists.txt  matrix_ringbuf.c  matrix_ringbuf.h  mhal_defines.h  remote_buffer_module.cpp  remote_buffer_module.h  remote_buffer_module.sidl  remote_test_main.c  testringbuf_client.cpp  testringbuf_server.cpp
test/callbackTest/: CMakeLists.txt  callback_module.cpp  callback_module.h  remote_callback_module.cpp  remote_callback_module.h  remote_callback_module.sidl  remote_test_main.c  testcallback_client.cpp  testcallback_server.cpp
test/sampleTest/: CMakeLists.txt  genSampleApis.py  remote_sample_module.cpp  remote_sample_module.h  remote_test_main.c  sample_module.c  sample_module.h
test/structTest/: CMakeLists.txt  remote_struct_module.sidl  remote_test_main.c  remote_upstruct_module.cpp  remote_upstruct_module.h  remote_upstruct_module.sidl  sample_module.h  struct_module.c  struct_module.h
test/tcli/: CMakeLists.txt  clog.h  tos_tcli.h
test/tcli/include/: clog.h  tos_tcli.h
test/tcli/proxy/: CMakeLists.txt  remote_tos_tcli.bak  remote_tos_tcli.cpp  remote_tos_tcli.cpp.bak  remote_tos_tcli.h  remote_tos_tcli.sidl  tos_tcli副本.11
test/tcli/src/: CMakeLists.txt  tos_tcli.cpp
test/tcli/test/: CMakeLists.txt  main.c  test_main.c  test_tcli.c
tools/aarch64_qemu/: aarch64_qemu_config  buildroot_config  make_a_test_environment.md
tools/sidl/: idlTypes.py  parser.py  sidl.py
tools/sidl/templates/: remote_template.cpp  remote_template.h
tools/src/: h2remote.py  remote_sample_module.cpp  remote_sample_module.h  remote_sample_module.idl  remote_sample_module.sidl
tools/src/sidl/: idlTypes.py  parser.py  sidl.py
tools/src/sidl/templates/: remote_template.cpp  remote_template.h
tools/src/templates/: remote_template.cpp  remote_template.h
