FIND_PACKAGE(ServiceManager REQUIRED)
INCLUDE_DIRECTORIES(${ServiceManager_INCLUDE_DIR})

FIND_PACKAGE(AndroidToolsets REQUIRED)
INCLUDE_DIRECTORIES(${AndroidToolsets_INCLUDE_DIR})

set(SERVICE_MANAGER_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/service_manager.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/binder.c
)


ADD_EXECUTABLE(servicemanager ${SERVICE_MANAGER_SRC})
SET_TARGET_PROPERTIES(servicemanager PROPERTIES COMPILE_DEFINITIONS "SM_MAIN")

ADD_LIBRARY(libservicemanager SHARED ${SERVICE_MANAGER_SRC})
SET_TARGET_PROPERTIES(libservicemanager PROPERTIES COMPILE_DEFINITIONS "SM_LIB")
SET_TARGET_PROPERTIES(libservicemanager PROPERTIES OUTPUT_NAME "servicemanager") 