if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sampleTest)
    ADD_SUBDIRECTORY(sampleTest)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sampleTest)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/structTest)
    ADD_SUBDIRECTORY(structTest)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/structTest)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/bufferTest)
    ADD_SUBDIRECTORY(bufferTest)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/bufferTest)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/callbackTest)
    ADD_SUBDIRECTORY(callbackTest)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/callbackTest)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/tcli)
    ADD_SUBDIRECTORY(tcli)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/tcli)