FIND_PACKAGE(AndroidToolsets REQUIRED)
INCLUDE_DIRECTORIES(${AndroidToolsets_INCLUDE_DIR})

FIND_PACKAGE(StandaloneBinder REQUIRED)
INCLUDE_DIRECTORIES(${StandaloneBinder_INCLUDE_DIR})

FIND_PACKAGE(ServiceManager REQUIRED)
INCLUDE_DIRECTORIES(${ServiceManager_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

#SERVER for CALLBACKTEST
set(SAMPLE_CALLBACKTEST_SRC_SERVICE
   ${CMAKE_CURRENT_SOURCE_DIR}/callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
)

ADD_EXECUTABLE(CALLBACKTESTService ${SAMPLE_CALLBACKTEST_SRC_SERVICE})
set_target_properties(CALLBACKTESTService PROPERTIES COMPILE_DEFINITIONS "BINDER_SERVICE")
ADD_DEPENDENCIES(CALLBACKTESTService StandaloneBinder)
ADD_DEPENDENCIES(CALLBACKTESTService libservicemanager)
TARGET_LINK_LIBRARIES(CALLBACKTESTService StandaloneBinder libservicemanager ${CMAKE_TEST_LINKLIBS})

#CLIENT for CALLBACKTEST
set(SAMPLE_CALLBACKTEST_SRC_CLIENT
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
)

ADD_EXECUTABLE(CALLBACKTESTClient ${SAMPLE_CALLBACKTEST_SRC_CLIENT})
set_target_properties(CALLBACKTESTClient PROPERTIES COMPILE_DEFINITIONS "BINDER_CLIENT")
ADD_DEPENDENCIES(CALLBACKTESTClient StandaloneBinder)
TARGET_LINK_LIBRARIES(CALLBACKTESTClient StandaloneBinder ${CMAKE_TEST_LINKLIBS})
