FIND_PACKAGE(AndroidToolsets REQUIRED)
INCLUDE_DIRECTORIES(${AndroidToolsets_INCLUDE_DIR})

FIND_PACKAGE(StandaloneBinder REQUIRED)
INCLUDE_DIRECTORIES(${StandaloneBinder_INCLUDE_DIR})

FIND_PACKAGE(ServiceManager REQUIRED)
INCLUDE_DIRECTORIES(${ServiceManager_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(Sidl REQUIRED)

#generate sample_module and remote code
SET(STRUCTTEST_MODULE_CODE_LIST
    ${CMAKE_CURRENT_BINARY_DIR}/remote_struct_module.h
    ${CMAKE_CURRENT_BINARY_DIR}/remote_struct_module.cpp
)
ADD_CUSTOM_COMMAND(OUTPUT ${STRUCTTEST_MODULE_CODE_LIST} 
    COMMAND echo "Generating struct_module code file..."
    COMMAND python ${PROJECT_SOURCE_DIR}/tools/sidl/sidl.py ${CMAKE_CURRENT_SOURCE_DIR}/remote_struct_module.sidl
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/remote_struct_module.sidl
    DEPENDS ${Sidl_INCLUDE_FILES}
    )

ADD_CUSTOM_TARGET(STRUCTTESTCode DEPENDS ${STRUCTTEST_MODULE_CODE_LIST})

#Service for STRUCTTEST
set(STRUCTTEST_SRC_SERVICE
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
   ${CMAKE_CURRENT_SOURCE_DIR}/struct_module.c
   ${CMAKE_CURRENT_SOURCE_DIR}/struct_module.h
   ${CMAKE_CURRENT_BINARY_DIR}/remote_struct_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_upstruct_module.cpp
)
ADD_EXECUTABLE(STRUCTTESTService ${STRUCTTEST_SRC_SERVICE})
set_target_properties(STRUCTTESTService PROPERTIES COMPILE_DEFINITIONS "BINDER_SERVICE")
ADD_DEPENDENCIES(STRUCTTESTService StandaloneBinder)
ADD_DEPENDENCIES(libservicemanager StandaloneBinder)
TARGET_LINK_LIBRARIES(STRUCTTESTService StandaloneBinder libservicemanager ${CMAKE_TEST_LINKLIBS})

#Client for STRUCTTEST
set(STRUCTTEST_SRC_CLIENT
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
   ${CMAKE_CURRENT_BINARY_DIR}/remote_struct_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_upstruct_module.cpp
)
ADD_EXECUTABLE(STRUCTTESTClient ${STRUCTTEST_SRC_CLIENT})
set_target_properties(STRUCTTESTClient PROPERTIES COMPILE_DEFINITIONS "BINDER_CLIENT")
ADD_DEPENDENCIES(STRUCTTESTClient StandaloneBinder)
TARGET_LINK_LIBRARIES(STRUCTTESTClient StandaloneBinder ${CMAKE_TEST_LINKLIBS})
