if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src)
    ADD_SUBDIRECTORY(src)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/proxy)
    ADD_SUBDIRECTORY(proxy)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/proxy)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/test)
    ADD_SUBDIRECTORY(test)
endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/test)
