FIND_PACKAGE(AndroidToolsets REQUIRED)
INCLUDE_DIRECTORIES(${AndroidToolsets_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include/)

AUX_SOURCE_DIRECTORY(. LIB_TCLI_SRC)

ADD_LIBRARY(tcli SHARED ${LIB_TCLI_SRC})
TARGET_LINK_LIBRARIES(tcli ${CMAKE_BINDER_LINKLIBS} AndroidToolsets)
ADD_DEPENDENCIES(tcli AndroidToolsets)
